Testes da PedidoService / outras alterações